# lambda-microvm-webapp

./: README.md
code-server/: .gitignore  biome.json  cdk.json  package-lock.json  package.json
code-server/artifact/base-image/: Dockerfile  extensions.txt  settings.json
code-server/artifact/edge/: index.js  package-lock.json
code-server/lib/: config.ts  lambda-microvm-stack.ts
code-server/test/: lambda-microvm.test.ts
streamlit/: .gitignore  app.py  requirements-dev.txt  ruff.toml
streamlit/app/: config.py  stack.py
streamlit/artifact/base-image/: Dockerfile  main.py  pyproject.toml
streamlit/artifact/edge/: index.js  package.json
streamlit/artifact/edge-response/: index.js
streamlit/tests/unit/: test_streamlit_stack.py
