[project]
name = "streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-bedrock-token-generator>=1.1.0",
    "strands-agents[anthropic]>=1.45.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
